--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="My Portfolio Mariam is frontend developer vuejs3 content information about me">
+    <meta name="description" content="Mariam's Portfolio to frontend developer (vuejs3)contents information about me and projects that's work in it">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
 </head>
